tests/errors/sem_call13.java
public class sem_call13 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , 10 );
}
}